# claude-here

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  test_file.py
.github/workflows/: run-tests.yml
claude_here/: __coconut__.py  __init__.coco  __init__.py  debugger.coco  debugger.py  launcher.coco  launcher.py  main.coco  main.py  prompter.coco  tests.coco  util.coco
claude_here/test_files/: fib_test.py
